--- a/static/css/stylep.css
+++ b/static/css/stylep.css
@@ -21,7 +21,7 @@ body {
     width: 95%; 
     height:95%;
     font-family: 'Open Sans', sans-serif;
-    background-image: url("pizza2.png");
+    background-image: url("resizepizza.png");
     background-repeat: no-repeat;
     background-size:auto;
     background-color: #F9EBEA;
