--- a/static/css/stylep.css
+++ b/static/css/stylep.css
@@ -17,7 +17,7 @@ body {
 	width: 100%;
 	height:100%;
 	font-family: 'Open Sans', sans-serif;
-	background-color: pink;
+	background-color: #a8a800;
 	color: red;
 	font-size: 18px;
 	text-align:center;
