--- a/static/css/stylef.css
+++ b/static/css/stylef.css
@@ -20,8 +20,8 @@ body {
     width: 100%; 
     height:100%;
     font-family: 'Open Sans', sans-serif;
-    background-color: #3a0a01;
-    color: #0ff0d2;
+    background-color: skyblue;
+    color: red;
     font-size: 18px;
     text-align:center;
     letter-spacing:1.2px;
