--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <h1>   !!! WELCOME !!!</h1>
-    <div class="login">
+    <div class="login center">
         <h2>To proceed with the prediction, select the dataset.</h2>
         <br>
         <form action="{{ url_for('rpizza')}}" method="POST">     
